testing using vim dev tools

--- a/references.bib
+++ b/references.bib
@@ -1,7 +1,36 @@
+@article{Skasko2012,
+author = {Skasko, M and Wang, Y and Tian, Y and Tokarev, A and Munguia, J and Ruiz, A and Stephens, E.B and Opella, S.J and Guatelli, J.},
+journal = {J.Biol.Chem.},
+mendeley-groups = {PhD manuscript},
+pages = {58--67},
+title = {{HIV-1 Vpu Protein Antagonizes Innate Restriction Factor BST-2 via Lipid-embedded Helix-Helix Interactions.}},
+url = {http://www.rcsb.org/pdb/explore/explore.do?structureId=2LK9},
+volume = {287},
+year = {2012}
+}
+@article{Goetz1998,
+abstract = {Binary Lennard-Jones fluids consisting of "solvent" and "surfactant" molecules are studied as simplified model systems for amphiphilic molecules in solution. Using Monte Carlo and molecular dynamics simulations, we observe the self-assembly of the surfactant molecules into bilayer membranes. These bilayers are fluid since the surfactants exhibit rapid lateral diffusion. We also measure the interfacial tension and the compressibility modulus of these bilayers. We show that they exhibit a tensionless state and characterize the corresponding stress profile. In this way, we bridge the gap between previous theoretical studies which were based (i) on discrete models with atomic resolution and (ii) on continuum models in which the bilayer membrane is treated as a smooth surface. (C) 1998 American Institute of Physics.},
+author = {Goetz, R and Lipowsky, R},
+doi = {10.1063/1.476160},
+isbn = {0021-9606},
+issn = {00219606},
+journal = {Journal Of Chemical Physics},
+keywords = {Liquid-Crystal,Molecular-Dynamics Simulation,Monolayer},
+mendeley-groups = {PhD manuscript},
+month = {may},
+number = {17},
+pages = {7397--7409},
+pmid = {73315200041},
+publisher = {AIP Publishing},
+title = {{Computer simulations of bilayer membranes: Self-assembly and interfacial tension}},
+url = {http://apps.isiknowledge.com/InboundService.do?Func=Frame{\&}product=WOS{\&}action=retrieve{\&}SrcApp=Papers{\&}UT=000073315200041{\&}SID=Y2aahHcI6lPKnkGpkg8{\&}Init=Yes{\&}SrcAuth=mekentosj{\&}mode=FullRecord{\&}customersID=mekentosj{\&}DestFail=http://access.isiproducts.com/custom{\_}i},
+volume = {108},
+year = {1998}
+}
 @article{Hull1969,
 author = {Hull, David L.},
 doi = {10.1007/BF00413784},
-issn = {0039-7857},
+issn = {00397857},
 journal = {Synthese},
 mendeley-groups = {PhD manuscript},
 month = {aug},
@@ -1647,7 +1676,7 @@ volume = {450},
 year = {2007}
 }
 @article{Hessa2005,
-abstract = {Membrane proteins depend on complex translocation machineries for insertion into target membranes. Although it has long been known that an abundance of nonpolar residues in transmembrane helices is the principal criterion for membrane insertion, the specific sequence-coding for transmembrane helices has not been identified. By challenging the endoplasmic reticulum Sec61 translocon with an extensive set of designed polypeptide segments, we have determined the basic features of this code, including a 'biological' hydrophobicity scale. We find that membrane insertion depends strongly on the position of polar residues within transmembrane segments, adding a new dimension to the problem of predicting transmembrane helices from amino acid sequences. Our results indicate that direct protein-lipid interactions are critical during translocon-mediated membrane insertion.},
+abstract = {Membrane proteins depend on complex translocation machineries for insertion into target membranes. Although it has long been known that an abundance of nonpolar residues in transmembrane helices is the principal criterion for membrane insertion, the specific sequence-coding for transmembrane helices has not been identified. By challenging the endoplasmic reticulum Sec61 translocon with an extensive set of designed polypeptide segments, we have determined the basic features of this code, including a 'biological' hydrophobicity scale. We find that membrane insertion depends strongly on the position of polar residues within transmembrane segments, adding a new dimension to the problem of predicting transmembrane helices from amino acid sequences. Our results indicate that direct protein lipid interactions are critical during translocon-mediated membrane insertion.},
 author = {Hessa, Tara and Kim, Hyun and Bihlmaier, Karl and Lundin, Carolina and Boekel, Jorrit and Andersson, Helena and Nilsson, Ingmarie and White, Stephen H and von Heijne, Gunnar},
 doi = {10.1038/nature03216},
 file = {:Users/James/Documents/Mendeley Desktop/Hessa et al. - 2005 - Recognition of transmembrane helices by the endoplasmic reticulum translocon. - Nature.pdf:pdf},
@@ -1668,9 +1697,9 @@ year = {2005}
 }
 @article{Planque2003,
 abstract = {Biological membranes are characterized by a heterogeneous composition, which is not only manifested in the wide variety of their components, but also in aspects like the lateral organization, topology, and conformation of proteins and lipids. In bringing about the correct membrane structure, protein-lipid interactions can be expected to play a prominent role. The extent of hydrophobic matching between transmembrane protein segments and lipids potentially constitutes a versatile director of membrane organization, because a tendency to avoid hydrophobic mismatch could result in compensating adaptations such as tilt of the transmembrane segment or segregation into distinct domains. Also, interfacial interactions between lipid headgroups and the aromatic and charged residues that typically flank transmembrane domains may act as an organizing element. In this review, we discuss the numerous model studies that have systematically explored the influence of hydrophobic matching and interfacial anchoring on membrane structure. Designed peptides consisting of a polyleucine or polyleucine/alanine hydrophobic stretch, which is flanked on both sides by tryptophan or lysine residues, reflect the general layout of transmembrane protein segments. It is shown for phosphatidylcholine bilayers and for other model membranes that these peptides adapt a transmembrane topology without extensive peptide or lipid adaptations under conditions of hydrophobic matching, but that significant rearrangements can result from hydrophobic mismatch. Moreover, these effects depend on the nature of the flanking residues, implying a modulation of the mismatch response by interfacial interactions of the flanking residues. The implications of these model studies for the organization of biomembranes are discussed in the context of recent experiments with more complex systems.},
-author = {de Planque, Maurits R. R. and Killian*, J. Antoinette},
+author = {de Planque, Maurits R. R. and Killian, J. Antoinette},
 doi = {10.1080/09687680310001605352},
-file = {:Users/James/Documents/Mendeley Desktop//de Planque, Killian - 2003 - Protein–lipid interactions studied with designed transmembrane peptides role of hydrophobic matching and.pdf:pdf},
+file = {:Users/James/Documents/Mendeley Desktop/de Planque, Killian - 2003 - Protein lipid interactions studied with designed transmembrane peptides role of hydrophobic matching and in.pdf:pdf},
 isbn = {0968-7688},
 issn = {0968-7688},
 journal = {Molecular Membrane Biology},
@@ -1681,12 +1710,13 @@ month = {jan},
 number = {4},
 pages = {271--284},
 pmid = {14578043},
-publisher = {Informa UK Ltd  UK},
-title = {{Protein–lipid interactions studied with designed transmembrane peptides: role of hydrophobic matching and interfacial anchoring (Review)}},
+publisher = {Informa UK Ltd UK},
+title = {{Protein lipid interactions studied with designed transmembrane peptides: role of hydrophobic matching and interfacial anchoring (Review)}},
 url = {http://www.tandfonline.com/doi/full/10.1080/09687680310001605352},
 volume = {20},
 year = {2003}
 }
+
 @article{Elisa2012,
 abstract = {The MOM (mitochondrial outer membrane) contains SA (signal-anchored) proteins that bear at their N-terminus a single hydrophobic segment that serves as both a mitochondrial targeting signal and an anchor at the membrane. These proteins, like the vast majority of mitochondrial proteins, are encoded in the nucleus and have to be imported into the organelle. Currently, the mechanisms by which they are targeted to and inserted into the OM (outer membrane) are unclear. To shed light on these issues, we employed a recombinant version of the SA protein OM45 and a synthetic peptide corresponding to its signal-anchor segment. Both forms are associated with isolated mitochondria independently of cytosolic factors. Interaction with mitochondria was diminished when a mutated form of the signal-anchor was employed. We demonstrate that the signal-anchor peptide acquires an $\alpha$-helical structure in a lipid environment and adopted a TM (transmembrane) topology within artificial lipid bilayers. Moreover, the peptide's affinity to artificial membranes with OM-like lipid composition was much higher than that of membranes with ER (endoplasmic reticulum)-like lipid composition. Collectively, our results suggest that SA proteins are specifically inserted into the MOM by a process that is not dependent on additional proteins, but is rather facilitated by the distinct lipid composition of this membrane.},
 author = {Merklinger, Elisa and Gofman, Yana and Kedrov, Alexej and Driessen, Arnold J. M. and Ben-Tal, Nir and Shai, Yechiel and Rapaport, Doron},
