--- a/thesis.tex
+++ b/thesis.tex
@@ -52,14 +52,12 @@
 % Uncomment the line below to use a customised Declaration statement
 %\def\declaration{All the work in this thesis has been sourced from Google}
 
-\beforeabstract
-
+\beforeabstract % Don't move the abstract, it doesn't like it.
 Transmembrane $\alpha$ helix containing proteins make up around a quarter of all proteins, as well as two thirds of drug targets, and contain some of the most critical proteins required for life as we know it. Yet they are fundamentally difficult to study experimentally. This is in part due to the very features that make them so biologically influential: their hydrophobic transmembrane helices. What is missing in the current literature is a nuanced understanding of the complexities of the helix composition beyond a hydrophobic region of around 20 residues. Currently it is known that the properties of transmembrane protein $\alpha$ helices underpin membrane protein insertion mechanisms and furthermore can be used to predict presence of function in the transmembrane helix itself. By leveraging large datasets of transmembrane proteins, this thesis is focussed on characterising features of $\alpha$ helices en masse, particularly regarding their topology, membrane-protein interactions, and intra-membrane protein interactions.
 
 Herein we expand on the core understanding of the biophysicochemical properties of these helices. We find evidence of a universal ``negative-not-inside'' rule that complements the famous ``positive-inside rule'' as well as intramembrane leucine propensity for the inner leaflet.
 
 Furthermore we provide an up-to-date dataset of potential Tail-Anchored proteins, a group of post-translationally inserted proteins.
-
 \afterabstract
 
 
@@ -69,7 +67,7 @@ Together my supervisory team have instilled in me an excitement of discovery. Fu
 
 Shout out to all the Biopython devs that saved my sanity!
 
-\subsection*{Preamble}
+\subsection*{Preamble} %A side note. the "*" hides the section number.
 In the 1950s and 1960s, the field of biological philosophy was still emerging. David Hull writes on the matter in his 1969 entitled {\it``What Philosophy of Biology is not''}:
 
 \begin{displayquote}
