--- a/thesis.tex
+++ b/thesis.tex
@@ -1,14 +1,20 @@
 % The 12pt option is required by the 2001/02 thesis regulations
 % Hacked together from the LaTeX template from the maths department of UoM
 
+
+%This is just the standard line that tells the virtual "printer" what document we're making.
 % Remove the twoside option for single-sided printing
 \documentclass[12pt,PhD,twoside]{muthesis}
 
 %These are the citation styles.
-\usepackage[backend=biber,style=nature,citestyle=nature]{biblatex} %science, nature, alphabetic are common choices.
+\usepackage[backend=bibtex,style=nature,citestyle=nature]{biblatex} %science, nature, alphabetic are common choices.
+%FYI
 % Citations styles = https://www.sharelatex.com/learn/Biblatex_citation_styles
 % Bibliography styles = https://www.sharelatex.com/learn/Biblatex_bibliography_styles
+
+
 \usepackage{graphicx} %use [!ht] (which means ignore sensible protocols and place here) not [h] (which means place here-ish) for figures otherwise they end up at the end of the chapter.
+
 \usepackage{amsmath}
 \usepackage{csquotes}
 \usepackage{longtable}
@@ -16,9 +22,7 @@
 \addbibresource{references.bib} % This is the folder containing all your "bibtex" references. All reference managers can export to this format.
 \graphicspath{{images/}} %Store all your figures here
 
-
-
-% abbreviations: 1.the code used in the text, 2. the short form, 3. the long form. http://tex.stackexchange.com/questions/86666/how-to-create-both-list-of-abbreviations-and-list-of-nomenclature-using-nomencl
+% abbreviations: The first option in the curly braces is the code used in the text, second is the short form, and third is the long form. http://tex.stackexchange.com/questions/86666/how-to-create-both-list-of-abbreviations-and-list-of-nomenclature-using-nomencl
 \newacronym{pm}{PM}{Plasma Membrane}
 \newacronym{md}{MD}{Molecular Dynamics}
 \newacronym{tm}{TM}{Transmembrane}
@@ -88,7 +92,7 @@ Baker, J. and Warwicker, J. A Bioinformatic Method to Identify Potential SNARE P
 
 \afterpreface % DO NOT DELETE. BAD THINGS HAPPEN.
 
-%This is where we call the chapters. No need to include ".tex"
+%This is where we call the chapters. No need to include ".tex" The chapters will be printed to the document in this order.
 \input{chapterIntroduction}
 \input{chapter02}
 \input{chapter03}
