Added cleanup for temporary scripts in compiler script and a new chapter

--- a/thesis.tex
+++ b/thesis.tex
@@ -34,6 +34,8 @@
 \newacronym{tmp}{TMP}{Transmembrane Protein}
 \newacronym{er}{ER}{Endoplasmic Reticulum}
 \newacronym{ta}{TA}{Tail Anchor}
+\newacronym{gpi}{GPI}{Glycosylphosphatidylinositol}
+
 \newacronym{pdb}{PDB}{Protein Data Bank}
 \newacronym{snare}{SNARE}{Soluble N-Ethylmaleimide-Sensitive Factor Attachment Receptor}
 
@@ -101,6 +103,7 @@ Baker, J. and Warwicker, J. A Bioinformatic Method to Identify Potential SNARE P
 \input{chapter02}
 \input{chapter03}
 \input{chapter04}
+\input{chapter05}
 \input{chapterConclusions}
 
 % This would be better at the begining so that before we get started, let's print the glossaries.
