added some more references and tweaks

--- a/chapter05.tex
+++ b/chapter05.tex
@@ -1,5 +1,5 @@
 
-\chapter{A novel GPI lipid anchor categorised} %Perhaps this will be for a later date!
+\chapter{A novel \gls{gpi} lipid anchor categorised} %Perhaps this will be for a later date!
 \section{Abstract}
 \section{Introduction}
 \section{Methods}
