--- a/thesis.tex
+++ b/thesis.tex
@@ -78,7 +78,7 @@ Together my supervisory team have instilled in me an excitement of discovery. Fu
 Shout out to all the Biopython devs that saved my sanity!
 
 \subsection*{Preamble} %A side note. the "*" hides the section number.
-In the 1950s and 1960s, the field of biological philosophy was still emerging. David Hull writes on the matter in his 1969 entitled {\it``What Philosophy of Biology is not''}:
+In the 1950s and 1960s, the field of biological philosophy was still emerging. David Hull writes on the matter in his 1969 article entitled {\it``What Philosophy of Biology is not''}:
 
 \begin{displayquote}
 ``Periodically through the history of biology, biologists have tried to do
