changed chapternaming structure

--- a/thesis.tex
+++ b/thesis.tex
@@ -99,12 +99,12 @@ Baker, J. and Warwicker, J. A Bioinformatic Method to Identify Potential SNARE P
 \afterpreface % DO NOT DELETE. BAD THINGS HAPPEN.
 
 %This is where we call the chapters. No need to include ".tex" The chapters will be printed to the document in this order.
-\input{chapterIntroduction}
-\input{chapter02}
-\input{chapter03}
-\input{chapter04}
-\input{chapter05}
-\input{chapterConclusions}
+\input{chapter_introduction}
+\input{chapter_tmcomposition}
+\input{chapter_tailanchor}
+\input{chapter_gpi}
+\input{chapter_predictfunction}
+\input{chapter_conclusions}
 
 % This would be better at the begining so that before we get started, let's print the glossaries.
 % In order for this to work a special build sequence is needed. http://tex.stackexchange.com/a/46732/42423
